Fix to videos